# quant-trading

./: .env.example  .gitignore  LICENSE  README.md  _run_daily_inner.bat  environment.yml  pyproject.toml  remove_schedule.bat  run_daily.bat  run_daily_safe.bat  setup_schedule.bat
configs/: risk_limits.yaml  universe_us5.txt  workflow_us5_lgb.yaml
docs/: architecture.md  llm-review.md  operations.md  roadmap.md  strategy-and-model.md
scripts/: 01_ingest.py  02_train.py  03_predict.py  04_execute.py  05_report.py  06_backtest.py  patch_tradingagents.py
src/qtf/: __init__.py  config.py
src/qtf/agents/: review.py  ticker_map.py
src/qtf/backtest/: engine.py  metrics.py  report.py
src/qtf/data/: ingest.py  moomoo_kline.py  schema.py
src/qtf/execution/: fees.py  moomoo_executor.py  order_planner.py
src/qtf/model/: train.py
src/qtf/orchestrator/: daily_cycle.py
src/qtf/report/: daily_report.py  metrics.py  snapshot.py
src/qtf/risk/: gates.py  market_hours.py
src/qtf/strategy/: predict.py  topk_weights.py
src/qtf/utils/: logging.py  subprocess_runner.py
tests/: test_backtest_metrics.py  test_executor.py  test_fees.py  test_metrics.py  test_order_planner.py  test_review.py  test_risk_gates.py  test_schema.py  test_ticker_map.py
