[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtf"
version = "0.1.0"
description = "qlib + moomoo automated trading framework (skeleton)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "pandas_market_calendars>=4.4",
  "mlflow>=2.10",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
